--- a/Index.html
+++ b/Index.html
@@ -11,5 +11,41 @@
   <meta name="robots" content="index, follow" />
   <link rel="icon" href="./Icons/photography.png" />
   <title>ELena Joy | Photographer</title>
-  <body></body>
+  <body>
+    <header class="main-head">
+      <nav>
+        <h1 id="logo">Elena Joy</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero-introduction flex">
+          <h2>
+            Elena Joy <br />
+            Photography
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            minima assumenda expedita similique quaerat maiores ab, itaque hic
+            explicabo eaque!
+          </p>
+          <a href="#gallery">Gallery</a>
+        </div>
+        <div class="hero-images">
+          <img
+            class="hero-elena"
+            src="Images/elena-joy.png"
+            alt="picture of elena joy"
+          />
+          <img src="Images/plant1.png" alt="" class="plant1 plant" />
+          <img src="Images/plant2.png" alt="" class="plant2 plant" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
