--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/Style.css" />
-  <meta
-    name="description"
-    content="Professional Photographer available for weddings and special events"
-  />
-  <meta name="robots" content="index, follow" />
-  <link rel="icon" href="./Icons/photography.png" />
-  <title>ELena Joy | Photographer</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Professional Photographer available for weddings and special events."
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="stylesheet" href="./Style.css" />
+    <link rel="icon" href="Icons/photography.png" />
+    <title>Elena Joy | Photographer</title>
+  </head>
   <body>
     <header class="main-head">
       <nav>
@@ -20,6 +22,11 @@
           <li><a href="#work">Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="burger">
+          <span class="line1"></span>
+          <span class="line2"></span>
+          <span class="line3"></span>
+        </div>
       </nav>
     </header>
     <main>
@@ -39,13 +46,98 @@
         <div class="hero-images">
           <img
             class="hero-elena"
-            src="Images/elena-joy.png"
+            src="./Images/elena-joy.png"
             alt="picture of elena joy"
           />
-          <img src="Images/plant1.png" alt="" class="plant1 plant" />
-          <img src="Images/plant2.png" alt="" class="plant2 plant" />
+          <img src="./Images/plant1.png" alt="" class="plant1 plant" />
+          <img src="./Images/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
+      <section class="about" id="about">
+        <div class="about-image">
+          <h5>MINIMAL</h5>
+          <img src="./Images/about-image.png" alt="portrait-picture" />
+        </div>
+        <div class="about-text flex" id="work">
+          <h2>Elena Joy</h2>
+          <div class="about-life">
+            <h3>My Life</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
+              consectetur asperiores harum dolore nihil fuga?
+            </p>
+          </div>
+          <div class="about-work">
+            <h3>My Work</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
+              consectetur asperiores harum dolore nihil fuga?
+            </p>
+          </div>
+          <div class="about-contact">
+            <h3>Get in touch</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
+              consectetur asperiores harum dolore nihil fuga?
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="gallery" id="gallery">
+        <header class="gallery-head">
+          <h2>Quality Photography</h2>
+          <p>My work pictures that I took</p>
+        </header>
+        <img class="gallery1" src="./Images/gallery-1.jpg" alt="man in suit" />
+        <img class="gallery2" src="./Images/gallery-2.jpg" alt="lady in coat" />
+        <img
+          class="gallery3"
+          src="./Images/gallery-3.jpg"
+          alt="lady in t-shirt"
+        />
+        <img
+          class="gallery4"
+          src="./Images/gallery-4.jpg"
+          alt="lady in jacket"
+        />
+      </div>
+      <section class="contact" id="contact">
+        <div class="form-wrapper flex">
+          <h2>
+            Get in <br />
+            <span> touch.</span>
+          </h2>
+          <form>
+            <label for="email">Your Email:</label>
+            <input type="email" id="email" required />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <img src="./Images/contact-image.jpg" alt="elena-joy" />
+      </section>
     </main>
+    <footer>
+      <h4>Elena Joy &copy; 2019</h4>
+      <ul>
+        <li>
+          <a href="#"
+            ><img src="./Icons/youtube-symbol 1.svg" alt="youtube-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./Icons/twitter 1.svg" alt="twitter-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./Icons/instagram 1.svg" alt="instagram" /></a>
+        </li>
+      </ul>
+    </footer>
+
+    <script src="app.js"></script>
   </body>
 </html>
